src/views/router/router.module.scss
@import '@/styles/globals.scss';

.wrapper {
	height: 100vh;
	width: 100vw;

	display: flex;
	flex-direction: column;
	justify-content: flex-start;
}

.container {
	flex-grow: 1;

	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.main {
	width: 100%;
	background-color: $primary-color;
	border-top-left-radius: 10px;
}

